--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "bottotto",
   "version": "1.0.0",
   "dependencies": {
+    "@discordjs/rest": "^0.4.1",
+    "discord-api-types": "^0.33.2",
     "discord.js": "^13.7.0",
     "fs-extra": "^10.1.0",
     "node-schedule": "^2.1.0"
