--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "discord.js": "^13.7.0",
     "fs-extra": "^10.1.0",
     "libsodium-wrappers": "^0.7.10",
-    "node-opus": "^0.3.3",
+    "libopus.js": "^0.0.1",
     "node-schedule": "^2.1.0",
-    "opusscript": "^0.0.8"
-  },
-  "devDependencies": {
-    "sequelize": "^6.20.1"
+    "sequelize": "^6.20.1",
+    "sqlite3": "^5.0.8"
   }
 }
